--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-12 col-lg-8 position-relative">
-                    <div>
+                    <div class="d-flex justify-content-between">
                         <h1>Catalogo Libri</h1><button type="button"
-                            class="btn btn-primary position-absolute top-0 end-0">Aggiungi Libro</button>
+                            class="btn btn-primary">Aggiungi Libro</button>
                     </div>
                     <table class="table table-striped table-hover">
                         <thead>
