--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <a class="navbar-brand p-2" href="https://www.google.com/?hl=it"><img src="./img/duck.png" alt="" width="50"
                     height="50"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" href="#" aria-current="page">Catalogo Libri <span
@@ -42,7 +42,7 @@
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
                     <!-- MANCA IL GRIGIO NEL TESTO -->
-                    <input class="form-control me-sm-2 bg-white" type="text" placeholder="Cerca"/>
+                    <input class="form-control me-sm-2 bg-white" type="text" placeholder="Cerca" />
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
                         Cerca
                     </button>
@@ -55,9 +55,8 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-12 col-lg-8 position-relative">
-                    <div class="d-flex justify-content-between">
-                        <h1>Catalogo Libri</h1><button type="button"
-                            class="btn btn-primary">Aggiungi Libro</button>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h1 class="fs-2">Catalogo Libri</h1><button type="button" class="btn btn-primary">Aggiungi Libro</button>
                     </div>
                     <table class="table table-striped table-hover">
                         <thead>
@@ -74,9 +73,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -85,9 +84,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -96,9 +95,9 @@
                                 <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td><span class="badge rounded-pill text-bg-warning text-white">In prestito</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -107,9 +106,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -118,9 +117,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-danger">Non Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -129,9 +128,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -140,9 +139,9 @@
                                 <td class="d-none d-md-table-cell">21/09/2023</td>
                                 <td><span class="badge rounded-pill text-bg-warning text-white">In prestito</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -151,9 +150,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -162,9 +161,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-danger">Non Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -173,9 +172,9 @@
                                 <td class="d-none d-md-table-cell">25/07/2023</td>
                                 <td><span class="badge rounded-pill text-bg-warning text-white">In prestito</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -184,9 +183,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                             </tr>
@@ -195,9 +194,9 @@
                                 <td class="d-none d-md-table-cell">-</td>
                                 <td><span class="badge rounded-pill text-bg-success">Disponibile</span></td>
                                 <td>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-pencil-fill"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary"><i
+                                    <button type="button" class="btn btn-outline-secondary btn-sm"><i
                                             class="bi bi-trash-fill"></i></button>
                                 </td>
                         </tbody>
@@ -205,7 +204,7 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="card m-3">
-                        <h2 class="card-header">F.A.Q</h2>
+                        <h2 class="card-header">Todo</h2>
                         <div class="card-body">
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -298,6 +297,8 @@
             </div>
         </div>
     </main>
+
+
     <footer>
         <!-- place footer here -->
     </footer>
