--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <div class="row">
                 <div class="col-12 col-lg-8 position-relative">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1 class="fs-2">Catalogo Libri</h1><button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                        <h1 class="fs-2">Catalogo Libri</h1>
+                        <a class="btn btn-primary" href="./add-book.html">Aggiungi Libro</a>
                     </div>
                     <table class="table table-striped table-hover">
                         <thead>
@@ -313,7 +314,3 @@
 </body>
 
 </html>
-
-
-<d-none></d-none>
-<d-block></d-block>
