--- a/add-book.html
+++ b/add-book.html
@@ -54,41 +54,49 @@
     <main>
         <div class="container p-3">
             <h1 class="fs-2">Nuovo Libro</h1>
-            <div class="row row-cols-2">
+            <div class="row p-2 row-cols-2">
                 <div class="col">
-                    <label for="validationCustom01" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                    <label for="validationCustom01" class="form-label">Nome Autore</label>
+                    <input type="text" class="form-control" id="validationCustom01" value="Inserisci il nome dell-autore" required>
                 </div>
                 <div class="col">
-                    <label for="validationCustom02" class="form-label">Last name</label>
-                    <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                    <label for="validationCustom02" class="form-label">Cognome Autore</label>
+                    <input type="text" class="form-control" id="validationCustom02" value="Inserisci il cognome dell'autore" required>
                 </div>
             </div>
-            <div class="row">
+            <div class="row p-2">
                 <div class="col-12">
-                    <label for="validationCustom02" class="form-label">Last name</label>
-                    <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                    <label for="validationCustom02" class="form-label">Titolo</label>
+                    <input type="text" class="form-control" id="validationCustom02" value="Inserisci il titolo del libro" required>
+                    Titolo versione italiana
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-lg-3">
+            <div class="row p-2 row-cols-1 row-cols-lg-3">
                 <div class="col">
+                    <label for="validationCustom02" class="form-label">Genere</label>
                     <select class="form-select" aria-label="Default select example">
-                        <option selected>Open this select menu</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        <option selected>Scegli il genere</option>
+                        <option value="1">Maschio</option>
+                        <option value="2">Femmina</option>
+                        <option value="3">Help ICON</option>
                     </select>
                 </div>
-                <div class="col">prova</div>
-                <div class="col">prova</div>
+                <div class="col">
+                    <label for="validationCustom02" class="form-label">Anno di Pubblicazione</label>
+                    <input type="date" class="form-control" id="validationCustom02" value="Inserisci l'anno" required>
+                </div>
+                <div class="col">
+                    <label for="validationCustom02" class="form-label">ISBN#</label>
+                    <input type="text" class="form-control" id="validationCustom02" value="Inserisci il codice ISBN#" required>
+                </div>
             </div>
         </div>
         <hr>
         <div class="container">
-            <div class="row row-cols-1">
+            <div class="row p-2 row-cols-1">
                 <div class="col">
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                        <label for="exampleFormControlTextarea1" class="form-label">Note</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                 </div>
@@ -96,11 +104,11 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="checkDefault">
                         <label class="form-check-label" for="checkDefault">
-                            Default checkbox
+                            Disponibile anche in digitale
                         </label>
                     </div>
-                    <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
-                    <label class="btn btn-primary" for="btn-check">Single toggle</label>
+                    <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off"> <br>
+                    <label class="btn btn-primary" for="btn-check">Aggiungi Libro</label>
                 </div>
             </div>
         </div>
