--- a/add-book.html
+++ b/add-book.html
@@ -40,13 +40,6 @@
                         <a class="nav-link" href="#">Help</a>
                     </li>
                 </ul>
-                <form class="d-flex my-2 my-lg-0">
-                    <!-- MANCA IL GRIGIO NEL TESTO -->
-                    <input class="form-control me-sm-2 bg-white" type="text" placeholder="Cerca" />
-                    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
-                        Cerca
-                    </button>
-                </form>
             </div>
         </nav>
     </header>
@@ -57,18 +50,18 @@
             <div class="row p-2 row-cols-2">
                 <div class="col">
                     <label for="validationCustom01" class="form-label">Nome Autore</label>
-                    <input type="text" class="form-control" id="validationCustom01" value="Inserisci il nome dell-autore" required>
+                    <input type="text" class="form-control" id="validationCustom01" placeholder="Inserisci il nome dell-autore" required>
                 </div>
                 <div class="col">
                     <label for="validationCustom02" class="form-label">Cognome Autore</label>
-                    <input type="text" class="form-control" id="validationCustom02" value="Inserisci il cognome dell'autore" required>
+                    <input type="text" class="form-control" id="validationCustom02" placeholder="Inserisci il cognome dell'autore" required>
                 </div>
             </div>
             <div class="row p-2">
                 <div class="col-12">
                     <label for="validationCustom02" class="form-label">Titolo</label>
-                    <input type="text" class="form-control" id="validationCustom02" value="Inserisci il titolo del libro" required>
-                    Titolo versione italiana
+                    <input type="text" class="form-control" id="validationCustom02" placeholder="Inserisci il titolo del libro" required> <br>
+                    <span class="text-secondary">Titolo versione italiana</span>
                 </div>
             </div>
             <div class="row p-2 row-cols-1 row-cols-lg-3">
@@ -87,7 +80,7 @@
                 </div>
                 <div class="col">
                     <label for="validationCustom02" class="form-label">ISBN#</label>
-                    <input type="text" class="form-control" id="validationCustom02" value="Inserisci il codice ISBN#" required>
+                    <input type="text" class="form-control" id="validationCustom02" placeholder="Inserisci il codice ISBN#" required>
                 </div>
             </div>
         </div>
@@ -97,7 +90,7 @@
                 <div class="col">
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Note</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Inserisci eventuali note sul libro" rows="3"></textarea>
                     </div>
                 </div>
                 <div class="col">
