--- a/add-book.html
+++ b/add-book.html
@@ -17,7 +17,7 @@
 
     <header>
         <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark">
-            <a class="navbar-brand p-2" href="https://www.google.com/?hl=it"><img src="./img/duck.png" alt="" width="50"
+            <a class="navbar-brand p-2" href="./index.html"><img src="./img/duck.png" alt="" width="50"
                     height="50"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -101,7 +101,7 @@
                         </label>
                     </div>
                     <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off"> <br>
-                    <label class="btn btn-primary" for="btn-check">Aggiungi Libro</label>
+                    <button type="submit" class="btn btn-primary" for="btn-check">Aggiungi Libro</button>
                 </div>
             </div>
         </div>
