--- a/add-book.html
+++ b/add-book.html
@@ -60,12 +60,12 @@
             <div class="row p-2">
                 <div class="col-12">
                     <label for="validationCustom02" class="form-label">Titolo</label>
-                    <input type="text" class="form-control" id="validationCustom02" placeholder="Inserisci il titolo del libro" required> <br>
+                    <input type="text" class="form-control" id="validationCustom02" placeholder="Inserisci il titolo del libro" required>
                     <span class="text-secondary">Titolo versione italiana</span>
                 </div>
             </div>
             <div class="row p-2 row-cols-1 row-cols-lg-3">
-                <div class="col">
+                <div class="col mb-3">
                     <label for="validationCustom02" class="form-label">Genere</label>
                     <select class="form-select" aria-label="Default select example">
                         <option selected>Scegli il genere</option>
@@ -74,9 +74,9 @@
                         <option value="3">Help ICON</option>
                     </select>
                 </div>
-                <div class="col">
+                <div class="col mb-3">
                     <label for="validationCustom02" class="form-label">Anno di Pubblicazione</label>
-                    <input type="date" class="form-control" id="validationCustom02" value="Inserisci l'anno" required>
+                    <input type="text" class="form-control" id="validationCustom02" placeholder="Inserisci l'anno" required>
                 </div>
                 <div class="col">
                     <label for="validationCustom02" class="form-label">ISBN#</label>
@@ -84,8 +84,8 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="container">
+            <hr>
             <div class="row p-2 row-cols-1">
                 <div class="col">
                     <div class="mb-3">
@@ -100,8 +100,8 @@
                             Disponibile anche in digitale
                         </label>
                     </div>
-                    <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off"> <br>
-                    <button type="submit" class="btn btn-primary" for="btn-check">Aggiungi Libro</button>
+                    <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
+                    <button type="submit" class="btn btn-primary mt-3" for="btn-check">Aggiungi Libro</button>
                 </div>
             </div>
         </div>
